--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,15 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - run: "echo world!"
+  
+  test_env_vars:
+    docker:
+      - image: cimg/base:2020.01
+    steps:
+      - run:
+          name: "echo an env var that is part of the project"
+          command: |
+            echo $MY_ENV_VAR
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -29,3 +38,6 @@ workflows:
       - print_world:
           requires:
             - print_hello
+  test-env-vars-workflow:
+    jobs:
+      - test-env-var
