--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,45 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
 # Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  print_hello:
+  save_hello_world_output:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       - image: circleci/node:13.8.0
     # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - run: "echo Hello!"
-  print_world:
+      - run: echo "text to output here" > output.txt
+      - persist_to_workspace:
+        root: ~/
+        paths:
+          - output.txt
+  print_output_file:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: "echo world!"
+      - attach_workspace:
+        at: ~/
+      - run: cat ~/output.txt
+        
   
-  test_env_vars:
-    docker:
-      - image: cimg/base:2020.01
-    steps:
-      - run:
-          name: "echo an env var that is part of the project"
-          command: |
-            echo $MY_ENV_VAR
+  # test_env_vars:
+  #   docker:
+  #     - image: cimg/base:2020.01
+  #   steps:
+  #     - run:
+  #         name: "echo an env var that is part of the project"
+  #         command: |
+  #           echo $MY_ENV_VAR
 
 # Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-world-workflow:
+  my_workflow:
     jobs:
-      - print_hello
-      - print_world:
+      - save_hello_world_output
+      - print_output_file:
           requires:
-            - print_hello
-  test-env-vars-workflow:
-    jobs:
-      - test_env_vars
+            - save_hello_world_output
+  # test-env-vars-workflow:
+  #   jobs:
+  #     - test_env_vars
