--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-# version: 2.1
+version: 2.1
 
 # jobs:
 #   save_hello_world_output:
@@ -27,25 +27,17 @@
 #           requires:
 #             - save_hello_world_output
 
-version: 2.1
-
-commands:
-  print_pipeline_id:
-    parameters:
-      id:
-        type: string
-    steps:
-      - run: echo << parameters.id >>
-
 jobs:
-  my_job:
+  build_fail_job:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - print_pipeline_id:
-          id: << pipeline.id >>
-      
+      - run: exit 1
+      - run:
+        name: on error
+        command: echo "Hello you Error!"
+        when: on_fail
 workflows:
-  parameters_workflow:
+  build_fail_workflow:
     jobs:
-      - my_job
+      - build_fail_job
