--- a/.circleci/config02.yml
+++ b/.circleci/config02.yml
@@ -1,5 +1,5 @@
 version: 2.1
-
+# this uses a pipeline ID
 commands:
   print_pipeline_id:
     parameters:
@@ -14,9 +14,27 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - print_pipeline_id:
-        id: << pipeline.id >>
+          id: << pipeline.id >>
       
 workflows:
   parameters_workflow:
     jobs:
       - my_job
+
+# This uses an environment variable
+# commands:
+#   print_pipeline_id:
+#     steps:
+#       - run: echo ${CIRCLE_WORKFLOW_ID}
+
+# jobs:
+#   my_job:
+#     docker:
+#       - image: circleci/node:13.8.0
+#     steps:
+#       - print_pipeline_id
+
+# workflows:
+#   my_workflow:
+#     jobs:
+#       - my_job
